--- a/Web Store Project/css/style.css
+++ b/Web Store Project/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background:#b4b1b1;
+    background:url("../Image/S1.jpg");
     display: flex;
     align-items: center;
     justify-content: center;
@@ -9,11 +9,14 @@ body{
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    background-size:cover;
+    background-repeat:no repeat;
+    background-position:center;
 }
 
 
 .Logo{
-    width:100px;
+    width:150px;
     height:auto;
     position: fixed;
     top:10px;
@@ -21,15 +24,15 @@ body{
 }
 button {
       padding: 10px;
-      font-size: 16px;
+      font-size: 6px;
       border: none;
       border-radius: 6px;
-      background: #ffd500;
+      background: #4facfe;
       color: black;
       cursor: pointer;
     }
     button:hover {
-      background: #ee7504;
+      background: #00c6ff;
     }
 .others {
     position: absolute;
@@ -72,11 +75,6 @@ button {
     top:1.5px;
     
 }
-.box{
-    display: flex;
-    flex-direction: column;
-    transform: translateY(-50px);
-}
 input{
    border: none;
    border-radius: 10px; 
@@ -92,4 +90,20 @@ input{
    width:250px;
    height:40px;
    margin-bottom: 15px;
+}
+.box {
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 30px;
+  border-radius: 12px;
+  width: 350px;
+  margin: 100px auto;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
+.QTV{
+    text-decoration:none;
+    color:violet;
+}
+.QTV:hover{
+    text-decoration:underline;
 }
