--- a/Web Store Project/css/styleAdmin.css
+++ b/Web Store Project/css/styleAdmin.css
@@ -28,7 +28,7 @@ body{
 .header-right {
     display: flex;
     align-items: center; 
-    margin-right:40px ; 
+    margin-right:60px ; 
 }
 
 .header-right a {
@@ -49,4 +49,45 @@ body{
 .content {
   margin-top: 100px;
   padding: 20px;
+}
+.others {
+    position: absolute;
+    top: 10px;       
+    right: 20px;    
+    display: flex;
+    align-items: center;
+}
+.others ul{
+ padding: 0 12px;
+ position: relative;
+}
+.others ul::after{
+    content: "";
+    display: block;
+    width: 1px;
+    height: 70%;
+    background: #545454;
+    position: absolute;
+    right: 0;
+    top:50%;
+    transform: translateY(-50%);
+}
+.others ul:last-child::after{
+    display: none;
+}
+.others ul:first-child{
+    position: relative;
+}
+.others ul:first-child input{
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #333;
+    background: transparent;
+    outline: none;
+}
+.others ul:first-child i{
+    position: absolute;
+    right: 17px ;
+    top:1.5px;
+    
 }
