--- a/Web Store Project/css/styleTT.css
+++ b/Web Store Project/css/styleTT.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(135deg, #4facfe, #00f2fe);
+    background-color: #c5c5c585;
     margin: 0;
     padding: 0;
     font-family: 'Segoe UI', Arial, sans-serif;
@@ -12,7 +12,7 @@ body {
     left: 0;
     width: 100%;
     height: 100px;
-    background-color: #0077b6;
+    background-color: #c9eff8ff;
     display: flex;
     justify-content: space-between;
     align-items: center;
