update danh muc

--- a/Web Store Project/css/donhangdanhan.css
+++ b/Web Store Project/css/donhangdanhan.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f8f9fa;
+  background: linear-gradient(135deg, #b9e6ff 0%, #f1fcff 100%);
   font-family: "Segoe UI", sans-serif;
   margin: 0;
   color: #333;
