--- a/Web Store Project/css/styleAdmin.css
+++ b/Web Store Project/css/styleAdmin.css
@@ -1,5 +1,5 @@
 body {
-  background: #c5c5c585;
+  background: linear-gradient(135deg, #b9e6ff 0%, #f1fcff 100%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,7 +18,7 @@ body {
   left: 0;
   width: 100%;
   height: 100px;
-  background-color: #c9eff8ff;
+  background: linear-gradient(90deg, #00b4d8, #00b4d8 );
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -900,4 +900,40 @@ h4 {
   background-color: #626262ff;
   color: white;
   font-weight: 600;
+}
+.infor {
+  text-align: center;
+  padding: 100px 40px 60px;
+  color: #023047;
+  max-width: 900px;
+  margin-top:50px;
+  background: rgba(255, 255, 255, 0.6);
+  border-radius: 20px;
+  box-shadow: 0 8px 35px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(8px);
+  transition: all 0.4s ease;
+}
+
+.infor:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 12px 45px rgba(0, 0, 0, 0.35);
+}
+
+.infor h1 {
+  font-size: 24px;
+  color: #0077b6;
+  margin-bottom: 15px;
+}
+
+.infor h2 {
+  font-weight: normal;
+  font-size: 18px;
+  color: #333;
+  margin: 8px 0;
+}
+
+.highlight {
+  color: #0077b6;
+  font-weight: bold;
+  text-transform: uppercase;
 }
