--- a/Web Store Project/css/styleUser.css
+++ b/Web Store Project/css/styleUser.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #c5c5c585;
+  background: linear-gradient(135deg, #b9e6ff 0%, #f1fcff 100%);
   margin: 0;
   padding: 0;
   overflow: auto;
@@ -16,7 +16,7 @@ body {
   left: 0;
   width: 100%;
   height: 100px;
-  background-color: #c9eff8ff;
+  background: linear-gradient(90deg, #00b4d8, #00b4d8 );
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -276,9 +276,10 @@ body {
   border-radius: 10px;
   padding: 25px 45px;
   margin: 40px auto;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
   width: fit-content;
   box-sizing: border-box;
+  
 }
 
 .danhsach-title {
@@ -289,6 +290,7 @@ body {
   border-bottom: 2px solid #eee;
   padding-bottom: 8px;
   text-align: left;
+  
 }
 
 .danhsach-grid {
@@ -296,6 +298,7 @@ body {
   grid-template-columns: repeat(8, 1fr);
   gap: 20px;
   text-align: center;
+  
 }
 
 .danh-muc {
@@ -303,11 +306,12 @@ body {
   cursor: pointer;
   border-radius: 10px;
   padding: 10px 0;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
 }
 
 .danh-muc:hover {
   transform: scale(1.08);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
   background-color: #fafafa;
 }
 
@@ -335,7 +339,7 @@ body {
   border-radius: 12px;
   padding: 25px 30px;
   margin: 0 auto;
-  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.4);
 }
 
 .goi-y-hom-nay h2 {
@@ -365,12 +369,12 @@ body {
   overflow: hidden;
   text-align: center;
   transition: all 0.3s ease;
-  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.4);
 }
 
 .goi-y-card:hover {
   transform: scale(1.05);
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.6);
 }
 
 .goi-y-card img {
